基本デザイン作成済み　残りはゲーム説明欄

--- a/janken_tpl.html
+++ b/janken_tpl.html
@@ -19,13 +19,11 @@
     <main>
       <div class="hide_last">
 
-     <div>Hit&Blow</div>
+     <div class="title">Hit & Blow</div>
   <button id="starbtn" onclick="newgame()">スタート</button>
 
-<div id="choice">
-
   <div id="youcard">
-		<ul id="youcards">
+		<ul class="youcards">
 			<li id="youNum1">*</li>
 			<li id="youNum2">*</li>
 			<li id="youNum3">*</li>
@@ -74,7 +72,6 @@
 
 <div id="field"></div>
   
-  </div>
     </main>
 
     <footer></footer>
