--- a/janken_tpl.html
+++ b/janken_tpl.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="css/sample.css" />
-    <title>じゃんけん</title>
+    <title>じゃんけんアプリ リッチver </title>
   </head>
 
   <body>
