最終調整後

--- a/janken_tpl.html
+++ b/janken_tpl.html
@@ -9,6 +9,7 @@
 
   <body>
 
+    <!------タイトル画面------>
     <header class="btn">
         <h2>数字当てゲーム</h2>
         <button id="str">開始</button>
@@ -30,10 +31,12 @@
 		</ul>
 	</div>
 
-
+  
 <button id="go">決定</button>
 <button id="clear">クリア</button>
 
+
+<!------セレクトボックス------>
 <div class="answerbox">
 <select name="myanswer_n">
   <option value="1">1</option>
